<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Play&amp;Trak</string>
    <string name="app_name_menu">Play&amp;Trak Menu</string>
    <string name="version">Version 1.0.2</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="yob">Year of Birth</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="start_game_session">New Game Session</string>
    <string name="submit_gs">Submit Game Session!</string>
    <string name="starting_amount">Starting Amount</string>
    <string name="final_amount">Final Amount</string>
    <string name="pick_time">Start Time</string>
    <string name="projected_time">End Time</string>
    <string name="gambling_session">Enter a New Session</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string-array name="game_mode">
        <item>Select a Game Mode</item>
        <item>Online</item>
        <item>Offline</item>
    </string-array>

    <string-array name="game_types">
        <item>Select a Game Type</item>
        <item>Poker</item>
        <item>Blackjack</item>
        <item>Craps</item>
        <item>Roulette</item>
        <item>Slots</item>
        <item>Sports wagering</item>
        <item>Lottery tickets/scratch cards</item>
        <item>Other</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_main">NewMainActivity</string>

    <string name="title_template_step">Advice <xliff:g id="step_number">%1$d</xliff:g></string>

    <string name="advice1title">Don’t think of gambling as a way to make money.</string>
    <string name="advice1"><![CDATA[The bottom line is that gambling establishments like land-based casinos and online gambling sites are set up to take in more money than they pay out. This means that over time, you will lose more money than you win.
    \n\nAnd, remember it\'s not just casinos. All forms of gambling have the same principle – the vast majority of people lose so that a very small minority can have big wins. Virtually all people with gambling problems hold the false expectation that they are the ones who will be the big winners.
    \n\nThat belief feeds the problem.]]></string>

    <string name="advice2title">Always gamble with money that you can afford to lose.</string>
    <string name="advice2"><![CDATA[Gamble with money that you set aside for fun, like going to the movies or going out for drinks. Never use money that you need for important things like rent, bills, tuition, etc.]]></string>

    <string name="advice3title">Never chase losses.</string>
    <string name="advice3"><![CDATA[If you lose money, never try to get it back by going over your limit. This usually leads to even bigger losses.]]></string>

    <string name="advice4title">Set a money limit.</string>
    <string name="advice4"><![CDATA[Decide how much money you can afford to lose before you play. When you have lost that amount of money, quit. If you win – enjoy, but remember it won’t happen most of the time. ]]></string>

    <string name="advice5title">Set a time limit.</string>
    <string name="advice5"><![CDATA[Decide how much time you can afford to spend gambling. When you reach that time limit, stop gambling.]]></string>

    <string name="advice6title">Don’t gamble when you are depressed or upset.</string>
    <string name="advice6"><![CDATA[It is hard to make good decisions about gambling when you are feeling down. ]]></string>

    <string name="advice7title">Balance gambling with other activities.</string>
    <string name="advice7"><![CDATA[It’s important to enjoy other activities so that gambling doesn’t become too big a part of your life.]]></string>

    <string name="advice8title">Gambling, alcohol and drugs are not a good combination.</string>
    <string name="advice8"><![CDATA[Gambling under the influence is common, but it generally leads people to make bad decisions that they regret later. ]]></string>

    <string name="aboutUs"><![CDATA[For over 20 years, the International Centre for Youth Gambling Problems and High-Risk Behaviours at
    McGill University has been at the forefront of leading-edge research aimed at identifying and understanding the critical factors
    related to youth gambling issues.  In addition to its many research endeavors, the Centre also provides treatment for youth experiencing
    gambling problems. \n\nFor more information visit us on our website: http://www.youthgambling.com/]]></string>

</resources>
